Fix bounding/cropping issues

--- a/traceviewer.css
+++ b/traceviewer.css
@@ -19,13 +19,18 @@
   background-color: #cccccc;
 }
 
-.viewer-header-row {
+.viewer-row {
   margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: center;
+  overflow-x: hidden;
+}
+
+.viewer-header-row {
+  margin: 0;
 }
 
 .viewer-header-row-scale {
@@ -33,36 +38,37 @@
 }
 
 .viewer-data-container {
-
 }
 
 .viewer-data-row {
   background-color: #ffffff;
-  margin: 0;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: left;
   align-items: center;
 }
 
 .viewer-row-entry {
   height: 30px;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   box-sizing: border-box;
 }
 
 .viewer-row-label {
+  min-width: 180px;
   width: 180px;
   padding: 0 5px 0 5px;
+  justify-content: flex-end;
   border-style: solid;
   border-width: 0 2px 0 0;
   border-color: #e0e0e0;
 }
 
-.viewer-data-row-start-delay {
+.viewer-data-row-span-container {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .viewer-data-row-duration {
@@ -72,6 +78,7 @@
   border-width: 2px 0 2px 0;
   border-color: #ffffff;
   color: #707070;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
